pokeplatinum_c = files(   
    'coins.c',
    'enc_effects.c',
    'error_handling.c',
    'error_message_reset.c',
    'game_overlay.c',
    'game_version.c',
    'gx_layers.c',
    'heap.c',
    'item.c',
    'main.c',
    'map_header.c',
    'move_table.c',
    'narc.c',
    'party.c',
    'poffin.c',
    'strbuf.c',
    'unk_0200112C.c',
    'unk_02001AF4.c',
    'unk_020021B0.c',
    'render_text.c',
    'font.c',
    'unk_02002F38.c',
    'unk_02003B60.c',
    'unk_020041CC.c',
    'unk_02005474.c',
    'unk_02006224.c',
    'unk_0200679C.c',
    'overlay_manager.c',
    'unk_02006E3C.c',
    'unk_0200762C.c',
    'unk_020093B4.c',
    'sprite_resource.c',
    'unk_0200A328.c',
    'unk_0200A784.c',
    'unk_0200A9DC.c',
    'message.c',
    'message_util.c',
    'string_template.c',
    'unk_0200C440.c',
    'unk_0200C6E4.c',
    'sys_task.c',
    'unk_0200DA60.c',
    'unk_0200F174.c',
    'unk_0200F85C.c',
    'unk_02012480.c',
    'unk_02012744.c',
    'unk_020131EC.c',
    'rtc.c',
    'unk_02013A04.c',
    'screen_scroll_manager.c',
    'unk_02014000.c',
    'colored_arrow.c',
    'unk_02014A84.c',
    'unk_02014D38.c',
    'unk_02015064.c',
    'unk_0201567C.c',
    'unk_020158A8.c',
    'unk_02015920.c',
    'unk_02015F84.c',
    'unk_02017038.c',
    'easy3d_object.c',
    'unk_02017428.c',
    'unk_02017498.c',
    'unk_02017728.c',
    'unk_02018340.c',
    'easy3d.c',
    'sys_task_manager.c',
    'unk_0201CED8.c',
    'charcode.c',
    'unk_0201D15C.c',
    'text.c',
    'unk_0201DBEC.c',
    'unk_0201DD00.c',
    'unk_0201E010.c',
    'ascii_util.c',
    'unk_0201E190.c',
    'unk_0201E3BC.c',
    'unk_0201E3D8.c',
    'unk_0201E86C.c',
    'unk_0201F834.c',
    'camera.c',
    'unk_02020AEC.c',
    'cell_actor.c',
    'touch_screen.c',
    'unk_02022844.c',
    'resource_collection.c',
    'unk_0202309C.c',
    'font_manager.c',
    'unk_02023FCC.c',
    'unk_0202414C.c',
    'unk_0202419C.c',
    'unk_020241F0.c',
    'unk_02024220.c',
    'unk_02024358.c',
    'savedata/save_table.c',
    'savedata.c',
    'unk_02025CB0.c',
    'save_player.c',
    'trainer_info.c',
    'unk_0202602C.c',
    'unk_02026150.c',
    'unk_020261E4.c',
    'unk_0202631C.c',
    'savedata_misc.c',
    'game_options.c',
    'unk_02027B70.c',
    'unk_02027F50.c',
    'unk_02027F84.c',
    'unk_02028124.c',
    'unk_0202854C.c',
    'unk_020298BC.c',
    'unk_0202ACE0.c',
    'unk_0202B37C.c',
    'journal.c',
    'unk_0202C7FC.c',
    'unk_0202C858.c',
    'unk_0202C9F4.c',
    'play_time.c',
    'unk_0202CC64.c',
    'game_records.c',
    'unk_0202D05C.c',
    'unk_0202D778.c',
    'unk_0202D7A8.c',
    'unk_0202DA40.c',
    'unk_0202DAB4.c',
    'unk_0202DF8C.c',
    'unk_0202E2CC.c',
    'unk_0202E840.c',
    'unk_0202EEC0.c',
    'unk_0202F108.c',
    'unk_0202F180.c',
    'unk_0202F1D4.c',
    'unk_0202FF4C.c',
    'unk_02030108.c',
    'unk_020302D0.c',
    'unk_02030494.c',
    'unk_0203061C.c',
    'unk_02030880.c',
    'unk_02030A80.c',
    'unk_02030CE8.c',
    'unk_02030EA4.c',
    'unk_02030EE0.c',
    'comm_ring.c',
    'unk_020322D8.c',
    'unk_0203266C.c',
    'unk_02032798.c',
    'communication_information.c',
    'unk_02033200.c',
    'communication_system.c',
    'unk_020363E8.c',
    'unk_020366A0.c',
    'unk_02038ED4.c',
    'unk_02038F8C.c',
    'unk_02038FFC.c',
    'unk_0203909C.c',
    'unk_020393C8.c',
    'unk_02039814.c',
    'unk_02039A58.c',
    'unk_02039A64.c',
    'unk_02039C80.c',
    'map_header_data.c',
    'field_overworld_state.c',
    'unk_0203A7D8.c',
    'unk_0203A944.c',
    'field_menu.c',
    'unk_0203C954.c',
    'field_system.c',
    'unk_0203D178.c',
    'unk_0203D1B8.c',
    'field_script_context.c',
    'script_manager.c',
    'scrcmd.c',
    'unk_02046AD4.c',
    'unk_02046C7C.c',
    'unk_020474B8.c',
    'unk_020480A8.c',
    'unk_020482D4.c',
    'unk_02048614.c',
    'unk_02048BD0.c',
    'unk_02048DD8.c',
    'unk_020494DC.c',
    'unk_02049D08.c',
    'unk_0204AEE8.c',
    'unk_0204B64C.c',
    'unk_0204B830.c',
    'unk_0204C500.c',
    'unk_0204C6C8.c',
    'unk_0204C8F0.c',
    'unk_0204CA84.c',
    'unk_0204CDDC.c',
    'unk_0204CFFC.c',
    'unk_0204E240.c',
    'unk_0204E378.c',
    'unk_0204E3CC.c',
    'unk_0204E75C.c',
    'unk_0204E974.c',
    'unk_0204EDA4.c',
    'unk_0204F02C.c',
    'unk_0204F04C.c',
    'unk_0204F13C.c',
    'unk_0204FA34.c',
    'unk_0204FAB4.c',
    'unk_0205001C.c',
    'unk_0205003C.c',
    'unk_02050548.c',
    'unk_02050568.c',
    'vars_flags.c',
    'unk_020508D4.c',
    'unk_02050A74.c',
    'unk_02051D8C.c',
    'unk_020528D0.c',
    'unk_02052C6C.c',
    'field_map_change.c',
    'unk_02054884.c',
    'unk_02054BD0.c',
    'unk_02054D00.c',
    'unk_020553DC.c',
    'unk_020556C4.c',
    'unk_0205578C.c',
    'unk_02055808.c',
    'unk_020559DC.c',
    'unk_02055C50.c',
    'unk_020562F8.c',
    'poketch_data.c',
    'unk_02056B30.c',
    'unk_020573FC.c',
    'unk_0205749C.c',
    'comm_player_manager.c',
    'field_comm_manager.c',
    'unk_0205A0D8.c',
    'unk_0205B33C.c',
    'unk_0205C22C.c',
    'unk_0205C980.c',
    'unk_0205CA94.c',
    'unk_0205D8CC.c',
    'unk_0205DAC8.c',
    'unk_0205DFC4.c',
    'player_avatar.c',
    'unk_0205F180.c',
    'map_object.c',
    'map_object_move.c',
    'unk_0206450C.c',
    'unk_020655F4.c',
    'unk_020673B8.c',
    'unk_020677F4.c',
    'unk_02067A84.c',
    'unk_02068344.c',
    'unk_020683F4.c',
    'pokeradar.c',
    'unk_02069BE0.c',
    'unk_0206A780.c',
    'unk_0206A8DC.c',
    'unk_0206AFE0.c',
    'unk_0206B70C.c',
    'unk_0206B9D8.c',
    'unk_0206C0E8.c',
    'unk_0206C2D0.c',
    'roaming_pokemon.c',
    'unk_0206C660.c',
    'unk_0206C784.c',
    'unk_0206CCB0.c',
    'unk_0206F314.c',
    'unk_02070428.c',
    'unk_0207064C.c',
    'unk_0207070C.c',
    'unk_020711C8.c',
    'unk_020711EC.c',
    'unk_0207160C.c',
    'unk_02071B10.c',
    'unk_02071CD0.c',
    'unk_02071CFC.c',
    'unk_02071D40.c',
    'unk_020722AC.c',
    'unk_02073700.c',
    'unk_02073838.c',
    'pokemon.c',
    'trainer_data.c',
    'unk_020797C8.c',
    'pokemon_icon.c',
    'unk_0207A274.c',
    'unk_0207A2A8.c',
    'unk_0207A6DC.c',
    'unk_0207AE68.c',
    'unk_0207C63C.c',
    'battle/battle_icon.c',
    'unk_0207CB08.c',
    'bag.c',
    'unk_0207DA28.c',
    'unk_0207DFAC.c',
    'unk_0207E060.c',
    'unk_0207E0B8.c',
    'unk_020819DC.c',
    'unk_02082C2C.c',
    'unk_02083370.c',
    'unk_02084B70.c',
    'unk_0208694C.c',
    'unk_020890F4.c',
    'unk_02089604.c',
    'unk_0208A3F4.c',
    'unk_0208B284.c',
    'unk_0208BA78.c',
    'unk_0208BEBC.c',
    'unk_0208C010.c',
    'unk_0208C098.c',
    'pokemon_summary_app.c',
    'unk_0208EA44.c',
    'unk_0208FCF8.c',
    'unk_020916B4.c',
    'unk_020920C0.c',
    'unk_020923C0.c',
    'unk_02092494.c',
    'unk_020933F8.c',
    'unk_02094EDC.c',
    'unk_02095AF0.c',
    'unk_02095CD4.c',
    'unk_02095E98.c',
    'unk_020961E8.c',
    'unk_02096420.c',
    'unk_020972FC.c',
    'berry_data.c',
    'unk_0209747C.c',
    'unk_02097624.c',
    'unk_02097B18.c',
    'unk_02098218.c',
    'unk_020985E4.c',
    'unk_020986CC.c',
    'pokedex_heightweight.c',
    'pokedex_data_index.c',
    'unk_020989DC.c',
    'unk_02098FFC.c',
    'unk_02099500.c',
    'unk_02099550.c',
    'unk_02099604.c',
    'unk_020996D0.c',
    'unk_020997B8.c',
    'unk_020998EC.c',
    'unk_02099D44.c',
    'unk_02099DFC.c',
    'unk_0209A2C4.c',
    'unk_0209A74C.c',
    'unk_0209AA74.c',
    'unk_0209AC14.c',
    'unk_0209ACBC.c',
    'unk_0209ACF4.c',
    'unk_0209B344.c',
    'unk_0209B6F8.c',
    'unk_0209BA18.c',
    'unk_0209BA80.c',
    'unk_0209BDF8.c',
    'unk_0209C194.c',
    'unk_0209C370.c',
    'unk_0209C390.c',
    'unk_020EDBAC.c',
    'unk_020F6824.c',
    'overlay000/ov0_dummy.c',
    'overlay001/ov1_021D0D80.c',
    'overlay002/ov2_dummy.c',
    'overlay003/ov3_dummy.c',
    'overlay004/ov4_021D0D80.c',
    'overlay004/ov4_021D2808.c',
    'overlay005/fieldmap.c',
    'overlay005/ov5_021D1A94.c',
    'overlay005/field_control.c',
    'overlay005/ov5_021D2F14.c',
    'overlay005/ov5_021D37AC.c',
    'overlay005/ov5_021D431C.c',
    'overlay005/ov5_021D521C.c',
    'overlay005/ov5_021D56BC.c',
    'overlay005/ov5_021D57BC.c',
    'overlay005/ov5_021D5878.c',
    'overlay005/ov5_021D5B40.c',
    'overlay005/ov5_021D5BC0.c',
    'overlay005/ov5_021D5CB0.c',
    'overlay005/ov5_021D5EB8.c',
    'overlay005/vs_seeker.c',
    'overlay005/ov5_021DC018.c',
    'overlay005/ov5_021DD42C.c',
    'overlay005/ov5_021DD6FC.c',
    'overlay005/ov5_021DDAE4.c',
    'overlay005/encounter_effect.c',
    'overlay005/ov5_021DF440.c',
    'overlay005/ov5_021DFB54.c',
    'overlay005/ov5_021E1154.c',
    'overlay005/ov5_021E135C.c',
    'overlay005/ov5_021E15F4.c',
    'overlay005/ov5_021E1B08.c',
    'overlay005/ov5_021E1D20.c',
    'overlay005/motion_blur.c',
    'overlay005/field_motion_blur.c',
    'overlay005/encounter_effect_core.c',
    'overlay005/ov5_021E622C.c',
    'overlay005/ov5_021E779C.c',
    'overlay005/ov5_021EA714.c',
    'overlay005/ov5_021EA874.c',
    'overlay005/ov5_021EAFA4.c',
    'overlay005/ov5_021EB1A0.c',
    'overlay005/ov5_021ECA70.c',
    'overlay005/ov5_021ECC20.c',
    'overlay005/ov5_021ECE40.c',
    'overlay005/ov5_021EE75C.c',
    'overlay005/ov5_021EE7D4.c',
    'overlay005/ov5_021EEAC8.c',
    'overlay005/ov5_021EEC68.c',
    'overlay005/ov5_021EEF34.c',
    'overlay005/ov5_021EF250.c',
    'overlay005/hblank_system.c',
    'overlay005/ov5_021EF4BC.c',
    'overlay005/ov5_021EF75C.c',
    'overlay005/ov5_021EFB0C.c',
    'overlay005/ov5_021F007C.c',
    'overlay005/ov5_021F067C.c',
    'overlay005/ov5_021F0824.c',
    'overlay005/ov5_021F08CC.c',
    'overlay005/ov5_021F0E84.c',
    'overlay005/ov5_021F0EB0.c',
    'overlay005/ov5_021F101C.c',
    'overlay005/ov5_021F10E8.c',
    'overlay005/ov5_021F134C.c',
    'overlay005/ov5_021F17B8.c',
    'overlay005/ov5_021F1CC8.c',
    'overlay005/ov5_021F204C.c',
    'overlay005/ov5_021F23D0.c',
    'overlay005/ov5_021F25C0.c',
    'overlay005/ov5_021F2850.c',
    'overlay005/ov5_021F2A7C.c',
    'overlay005/ov5_021F2BD0.c',
    'overlay005/ov5_021F2D20.c',
    'overlay005/ov5_021F3284.c',
    'overlay005/ov5_021F348C.c',
    'overlay005/ov5_021F37A8.c',
    'overlay005/ov5_021F3A50.c',
    'overlay005/ov5_021F3D00.c',
    'overlay005/ov5_021F3E74.c',
    'overlay005/ov5_021F4018.c',
    'overlay005/ov5_021F428C.c',
    'overlay005/ov5_021F47B0.c',
    'overlay005/ov5_021F4DAC.c',
    'overlay005/ov5_021F4E08.c',
    'overlay005/ov5_021F5060.c',
    'overlay005/ov5_021F50BC.c',
    'overlay005/ov5_021F5284.c',
    'overlay005/ov5_021F5428.c',
    'overlay005/ov5_021F55CC.c',
    'overlay005/ov5_021F575C.c',
    'overlay005/ov5_021F5894.c',
    'overlay005/ov5_021F5A10.c',
    'overlay005/ov5_021F600C.c',
    'overlay005/ov5_021F61BC.c',
    'overlay005/ov5_021F6454.c',
    'overlay005/ov5_021F77A8.c',
    'overlay005/ov5_021F8370.c',
    'overlay005/ov5_021F8560.c',
    'overlay005/ov5_021FAF40.c',
    'overlay005/ov5_021FF6B8.c',
    'overlay006/ov6_0223E140.c',
    'overlay006/ov6_02240C9C.c',
    'overlay006/ov6_022426AC.c',
    'overlay006/ov6_02242984.c',
    'overlay006/ov6_02242AF0.c',
    'overlay006/ov6_02242F74.c',
    'overlay006/ov6_02243004.c',
    'overlay006/ov6_022430C4.c',
    'overlay006/ov6_02243218.c',
    'overlay006/ov6_02243258.c',
    'overlay006/ov6_02246034.c',
    'overlay006/ov6_02246184.c',
    'overlay006/ov6_02246444.c',
    'overlay006/ov6_022465FC.c',
    'overlay006/ov6_02246A30.c',
    'overlay006/ov6_02246B74.c',
    'overlay006/ov6_02246BF4.c',
    'overlay006/ov6_02246C24.c',
    'overlay006/ov6_02246F00.c',
    'overlay006/ov6_02247078.c',
    'overlay006/ov6_02247100.c',
    'overlay006/ov6_022475B0.c',
    'overlay006/ov6_02247660.c',
    'overlay006/ov6_022477B8.c',
    'overlay006/ov6_02247830.c',
    'overlay006/ov6_02247A0C.c',
    'overlay006/ov6_02247D30.c',
    'overlay006/ov6_02247F5C.c',
    'overlay006/ov6_02248050.c',
    'overlay006/ov6_02248948.c',
    'overlay006/ov6_022489E4.c',
    'overlay007/communication_club.c',
    'overlay007/ov7_0224B4E8.c',
    'overlay007/ov7_0224BE9C.c',
    'overlay007/ov7_0224CD28.c',
    'overlay008/ov8_02249960.c',
    'overlay009/ov9_02249960.c',
    'overlay010/ov10_0221F800.c',
    'overlay011/ov11_0221F800.c',
    'overlay011/ov11_0221F840.c',
    'overlay012/is_form_symmetrical.c',
    'overlay012/ov12_0221FC20.c',
    'overlay012/ov12_022237EC.c',
    'overlay012/ov12_0222389C.c',
    'overlay012/ov12_0222421C.c',
    'overlay012/ov12_02225104.c',
    'overlay012/ov12_02225640.c',
    'overlay012/ov12_02225864.c',
    'overlay012/ov12_02226998.c',
    'overlay012/ov12_022269C0.c',
    'overlay012/ov12_02226B84.c',
    'overlay012/ov12_0222AC70.c',
    'overlay012/ov12_0222D6B0.c',
    'overlay012/ov12_0222E784.c',
    'overlay012/ov12_0222E91C.c',
    'overlay012/ov12_0222F700.c',
    'overlay012/ov12_022346A4.c',
    'overlay012/ov12_02234E44.c',
    'overlay012/ov12_02235254.c',
    'overlay012/ov12_02235E94.c',
    'overlay012/ov12_02237E54.c',
    'overlay012/ov12_02237EFC.c',
    'overlay012/ov12_022380BC.c',
    'overlay013/ov13_0221FC20.c',
    'overlay013/ov13_02221A88.c',
    'overlay013/ov13_02224500.c',
    'overlay013/ov13_02225710.c',
    'overlay013/ov13_022264F4.c',
    'overlay013/ov13_02227288.c',
    'overlay013/ov13_02227A4C.c',
    'overlay013/ov13_02227BDC.c',
    'overlay013/ov13_02228128.c',
    'overlay013/ov13_02228A38.c',
    'battle/trainer_ai/trainer_ai.c',
    'overlay015/ov15_dummy.c',
    'battle/ov16_0223B140.c',
    'battle/ov16_0223DF00.c',
    'battle/battle_script.c',
    'battle/battle_controller.c',
    'battle/battle_lib.c',
    'battle/battle_io_command.c',
    'battle/battle_display.c',
    'battle/ov16_02264798.c',
    'battle/battle_io.c',
    'battle/healthbar.c',
    'battle/ov16_02268520.c',
    'battle/ov16_0226871C.c',
    'battle/party_gauge.c',
    'battle/ov16_0226DB7C.c',
    'battle/ov16_0226DE44.c',
    'battle/ov16_0226E148.c',
    'overlay017/ov17_0223B140.c',
    'overlay017/ov17_0223CB1C.c',
    'overlay017/ov17_0223DAD0.c',
    'overlay017/ov17_0223F118.c',
    'overlay017/ov17_0223F7E4.c',
    'overlay017/ov17_02241270.c',
    'overlay017/ov17_022413D8.c',
    'overlay017/ov17_02243AC4.c',
    'overlay017/ov17_02243C28.c',
    'overlay017/ov17_02245F14.c',
    'overlay017/ov17_02246ECC.c',
    'overlay017/ov17_022476F8.c',
    'overlay017/ov17_02247A48.c',
    'overlay017/ov17_022492DC.c',
    'overlay017/ov17_0224A0FC.c',
    'overlay017/ov17_0224CFB8.c',
    'overlay017/ov17_0224E930.c',
    'overlay017/ov17_0224F080.c',
    'overlay017/ov17_0224F18C.c',
    'overlay017/ov17_0224F4D4.c',
    'overlay017/ov17_02250744.c',
    'overlay017/ov17_02251D6C.c',
    'overlay017/ov17_02252A70.c',
    'overlay017/ov17_02252AB0.c',
    'overlay017/ov17_02252CEC.c',
    'overlay018/ov18_0221F800.c',
    'overlay019/ov19_021D0D80.c',
    'overlay019/ov19_021D603C.c',
    'overlay019/ov19_021D61B0.c',
    'overlay019/ov19_021D79F8.c',
    'overlay019/ov19_021D8B54.c',
    'overlay019/ov19_021DA270.c',
    'overlay019/ov19_021DA814.c',
    'overlay019/ov19_021DA92C.c',
    'overlay019/ov19_021DB2FC.c',
    'overlay019/ov19_021DB8E4.c',
    'overlay019/ov19_021DC5F0.c',
    'overlay019/ov19_021DCF88.c',
    'overlay019/ov19_021DE3E8.c',
    'overlay019/ov19_021DEC04.c',
    'overlay019/ov19_021DF964.c',
    'overlay020/ov20_021D0D80.c',
    'overlay020/ov20_021D2098.c',
    'overlay020/ov20_021D2EA4.c',
    'overlay020/ov20_021D3864.c',
    'overlay020/ov20_021D3A54.c',
    'overlay020/ov20_021D40E8.c',
    'overlay020/ov20_021D4728.c',
    'overlay020/ov20_021D4E38.c',
    'overlay020/ov20_021D5044.c',
    'overlay021/ov21_021D0D80.c',
    'overlay021/ov21_021D1F90.c',
    'overlay021/ov21_021D1FA4.c',
    'overlay021/ov21_021D3208.c',
    'overlay021/ov21_021D3FE0.c',
    'overlay021/ov21_021D423C.c',
    'overlay021/ov21_021D4340.c',
    'overlay021/ov21_021D4C0C.c',
    'overlay021/ov21_021D4EE4.c',
    'overlay021/ov21_021D517C.c',
    'overlay021/ov21_021D5600.c',
    'overlay021/ov21_021D57B4.c',
    'overlay021/ov21_021D5AEC.c',
    'overlay021/ov21_021D76B0.c',
    'overlay021/ov21_021D85B0.c',
    'overlay021/ov21_021D94BC.c',
    'overlay021/ov21_021DC9BC.c',
    'overlay021/ov21_021DDD2C.c',
    'overlay021/ov21_021DE668.c',
    'overlay021/ov21_021DF734.c',
    'overlay021/ov21_021E0C68.c',
    'overlay021/ov21_021E1924.c',
    'overlay021/ov21_021E29DC.c',
    'overlay021/ov21_021E3FFC.c',
    'overlay021/ov21_021E4CA4.c',
    'overlay021/ov21_021E6014.c',
    'overlay021/ov21_021E68F4.c',
    'overlay021/ov21_021E737C.c',
    'overlay021/ov21_021E8484.c',
    'overlay021/ov21_021E8D48.c',
    'overlay022/ov22_02254DE0.c',
    'overlay022/ov22_02255094.c',
    'overlay022/ov22_02255D44.c',
    'overlay022/ov22_022578F4.c',
    'overlay022/ov22_02257F50.c',
    'overlay022/ov22_022588F0.c',
    'overlay022/ov22_0225894C.c',
    'overlay022/ov22_022589E0.c',
    'overlay022/ov22_02259098.c',
    'overlay022/ov22_02259484.c',
    'overlay022/ov22_02259560.c',
    'overlay022/ov22_022597BC.c',
    'overlay022/ov22_02259C58.c',
    'overlay022/ov22_0225A428.c',
    'overlay022/ov22_0225AF44.c',
    'overlay022/ov22_0225AF8C.c',
    'overlay022/ov22_0225B660.c',
    'overlay023/ov23_0223E140.c',
    'overlay023/ov23_022416A8.c',
    'overlay023/ov23_02241F74.c',
    'overlay023/ov23_0224340C.c',
    'overlay023/ov23_02248C08.c',
    'overlay023/ov23_02248F1C.c',
    'overlay023/ov23_02249918.c',
    'overlay023/ov23_022499E4.c',
    'overlay023/ov23_0224A1D0.c',
    'overlay023/ov23_0224B05C.c',
    'overlay023/ov23_0224DC40.c',
    'overlay023/ov23_0224F294.c',
    'overlay023/ov23_0225128C.c',
    'overlay023/ov23_022521F0.c',
    'overlay023/ov23_02253598.c',
    'overlay023/ov23_02253D40.c',
    'overlay023/ov23_0225426C.c',
    'overlay023/ov23_0225429C.c',
    'overlay023/ov23_022542CC.c',
    'overlay023/ov23_02254A14.c',
    'overlay024/ov24_02253CE0.c',
    'overlay025/poketch_system.c',
    'overlay025/ov25_02254560.c',
    'overlay025/ov25_02255090.c',
    'overlay025/ov25_02255540.c',
    'overlay025/poketch_button.c',
    'overlay025/ov25_02255DBC.c',
    'overlay026/ov26_022561C0.c',
    'overlay026/ov26_02256404.c',
    'overlay027/ov27_022561C0.c',
    'overlay027/ov27_0225680C.c',
    'overlay028/ov28_022561C0.c',
    'overlay028/ov28_0225697C.c',
    'overlay028/ov28_02256E9C.c',
    'overlay029/ov29_022561C0.c',
    'overlay029/ov29_022566C8.c',
    'overlay030/ov30_022561C0.c',
    'overlay030/ov30_022563EC.c',
    'overlay031/ov31_022561C0.c',
    'overlay031/ov31_02256554.c',
    'overlay032/ov32_022561C0.c',
    'overlay032/ov32_02256470.c',
    'overlay033/ov33_022561C0.c',
    'overlay033/ov33_02256474.c',
    'overlay034/ov34_022561C0.c',
    'overlay034/ov34_02256540.c',
    'overlay035/ov35_022561C0.c',
    'overlay035/ov35_02256410.c',
    'overlay036/ov36_022561C0.c',
    'overlay036/ov36_02256404.c',
    'overlay037/ov37_022561C0.c',
    'overlay037/ov37_022563D4.c',
    'overlay038/ov38_022561C0.c',
    'overlay038/ov38_0225632C.c',
    'overlay039/ov39_022561C0.c',
    'overlay039/ov39_022563DC.c',
    'overlay040/ov40_022561C0.c',
    'overlay040/ov40_0225645C.c',
    'overlay041/ov41_022561C0.c',
    'overlay041/ov41_022567B0.c',
    'overlay042/ov42_022561C0.c',
    'overlay042/ov42_022563D4.c',
    'overlay043/ov43_022561C0.c',
    'overlay043/ov43_02256544.c',
    'overlay044/ov44_022561C0.c',
    'overlay044/ov44_022565BC.c',
    'overlay045/ov45_022561C0.c',
    'overlay045/ov45_022566EC.c',
    'overlay046/ov46_022561C0.c',
    'overlay046/ov46_02256BCC.c',
    'overlay047/ov47_022561C0.c',
    'overlay047/ov47_02256634.c',
    'overlay048/ov48_022561C0.c',
    'overlay048/ov48_0225650C.c',
    'overlay049/ov49_022561C0.c',
    'overlay049/ov49_022563D4.c',
    'overlay050/ov50_022561C0.c',
    'overlay050/ov50_02256510.c',
    'overlay051/ov51_022561C0.c',
    'overlay051/ov51_0225632C.c',
    'overlay052/ov52_022561C0.c',
    'overlay052/ov52_02256694.c',
    'overlay053/ov53_022561C0.c',
    'overlay053/ov53_02256420.c',
    'overlay054/ov54_022561C0.c',
    'overlay054/ov54_0225642C.c',
    'overlay055/ov55_022561C0.c',
    'overlay055/ov55_0225632C.c',
    'overlay056/ov56_022561C0.c',
    'overlay057/ov57_021D0D80.c',
    'overlay057/ov57_021D0F30.c',
    'overlay058/ov58_021D0D80.c',
    'overlay059/ov59_021D0D80.c',
    'overlay059/ov59_021D2A2C.c',
    'overlay059/ov59_021D2B44.c',
    'overlay059/ov59_021D2F88.c',
    'overlay060/ov60_0221F800.c',
    'overlay060/ov60_0221F968.c',
    'overlay061/ov61_0222AE60.c',
    'overlay061/ov61_0222B008.c',
    'overlay061/ov61_0222BC4C.c',
    'overlay061/ov61_0222BF44.c',
    'overlay062/ov62_0222F2C0.c',
    'overlay062/ov62_022300D8.c',
    'overlay062/ov62_02231690.c',
    'overlay062/ov62_02234A10.c',
    'overlay062/ov62_02235278.c',
    'overlay062/ov62_02235E64.c',
    'overlay062/ov62_02236CBC.c',
    'overlay062/ov62_02237D24.c',
    'overlay062/ov62_02239D60.c',
    'overlay062/ov62_0223CAEC.c',
    'overlay062/ov62_0223DFA8.c',
    'overlay062/ov62_0224112C.c',
    'overlay062/ov62_02241204.c',
    'overlay062/ov62_02246B00.c',
    'overlay062/ov62_02247D74.c',
    'overlay062/ov62_02248408.c',
    'overlay063/ov63_0222AE60.c',
    'overlay063/ov63_0222BCE8.c',
    'overlay063/ov63_0222BE18.c',
    'overlay063/ov63_0222CA88.c',
    'overlay063/ov63_0222CCE4.c',
    'overlay063/ov63_0222D160.c',
    'overlay063/ov63_0222D1C0.c',
    'overlay063/ov63_0222D77C.c',
    'overlay064/ov64_0222DCE0.c',
    'overlay065/ov65_0222DCE0.c',
    'overlay065/ov65_02235060.c',
    'overlay065/ov65_02236474.c',
    'overlay065/ov65_0223648C.c',
    'overlay066/ov66_0222DCE0.c',
    'overlay066/ov66_0222DDF0.c',
    'overlay066/ov66_02230C44.c',
    'overlay066/ov66_02231428.c',
    'overlay066/ov66_0223177C.c',
    'overlay066/ov66_022324F0.c',
    'overlay066/ov66_022343A8.c',
    'overlay066/ov66_02234EA8.c',
    'overlay067/ov67_0225C700.c',
    'overlay068/ov68_0225C700.c',
    'overlay069/ov69_0225C700.c',
    'overlay070/ov70_0225C700.c',
    'overlay070/ov70_0225C858.c',
    'overlay070/ov70_0225C9B4.c',
    'overlay070/ov70_0225D9A4.c',
    'overlay070/ov70_02260A70.c',
    'overlay070/ov70_02260B44.c',
    'overlay070/ov70_02261E10.c',
    'overlay070/ov70_02262DA8.c',
    'overlay070/ov70_022630A4.c',
    'overlay070/ov70_02265F38.c',
    'overlay070/ov70_02266E9C.c',
    'overlay070/ov70_02269190.c',
    'overlay070/ov70_0226C338.c',
    'overlay070/ov70_0226C60C.c',
    'overlay070/ov70_0226C8B4.c',
    'overlay070/ov70_0226CC74.c',
    'overlay070/ov70_0226CE54.c',
    'overlay071/ov71_0223B140.c',
    'overlay071/ov71_0223C69C.c',
    'overlay071/ov71_0223CF0C.c',
    'overlay071/ov71_0223D324.c',
    'overlay072/ov72_0223D7A0.c',
    'overlay073/ov73_021D0D80.c',
    'overlay073/ov73_021D3250.c',
    'overlay074/ov74_021D0D80.c',
    'overlay075/ov75_021D0D80.c',
    'overlay076/ov76_0223B140.c',
    'overlay076/ov76_0223B870.c',
    'overlay076/ov76_0223D338.c',
    'overlay077/ov77_021D0D80.c',
    'overlay077/ov77_021D25B0.c',
    'overlay077/ov77_021D54B0.c',
    'overlay077/ov77_021D6670.c',
    'overlay077/ov77_021D6C70.c',
    'choose_starter/choose_starter_app.c',
    'overlay079/ov79_021D0D80.c',
    'overlay079/ov79_021D183C.c',
    'overlay079/ov79_021D20F4.c',
    'overlay079/ov79_021D2268.c',
    'overlay079/ov79_021D3768.c',
    'overlay080/ov80_021D0D80.c',
    'overlay080/ov80_021D1458.c',
    'overlay080/ov80_021D2A08.c',
    'overlay080/ov80_021D2AF4.c',
    'overlay081/ov81_021D0D80.c',
    'overlay081/ov81_021D1610.c',
    'overlay082/ov82_0223B140.c',
    'overlay082/ov82_0223B2E0.c',
    'overlay083/ov83_0223B5A0.c',
    'overlay083/ov83_0223C958.c',
    'overlay083/ov83_0223D144.c',
    'overlay083/ov83_0223D150.c',
    'overlay083/ov83_0223D4CC.c',
    'overlay083/ov83_0223D6A8.c',
    'overlay083/ov83_0223F7F4.c',
    'overlay084/ov84_0223B5A0.c',
    'overlay084/ov84_0223F040.c',
    'overlay084/ov84_022403F4.c',
    'overlay085/ov85_02241440.c',
    'overlay086/ov86_0223B140.c',
    'overlay087/ov87_021D0D80.c',
    'overlay087/ov87_021D106C.c',
    'overlay088/ov88_0223B140.c',
    'overlay088/ov88_0223E9C4.c',
    'overlay089/ov89_dummy.c',
    'overlay090/ov90_021D0D80.c',
    'overlay091/ov91_021D0D80.c',
    'overlay092/ov92_021D0D80.c',
    'overlay093/ov93_021D0D80.c',
    'overlay093/ov93_021D111C.c',
    'overlay094/ov94_0223B140.c',
    'overlay094/ov94_0223BCB0.c',
    'overlay094/ov94_0223C610.c',
    'overlay094/ov94_0223D0C4.c',
    'overlay094/ov94_0223DC04.c',
    'overlay094/ov94_0223E46C.c',
    'overlay094/ov94_0223FB48.c',
    'overlay094/ov94_022414B8.c',
    'overlay094/ov94_02242AD0.c',
    'overlay094/ov94_02243EF8.c',
    'overlay094/ov94_022443E0.c',
    'overlay094/ov94_022444C8.c',
    'overlay094/ov94_02244950.c',
    'overlay095/ov95_02246C20.c',
    'overlay095/ov95_022476F0.c',
    'overlay095/ov95_02247B6C.c',
    'overlay095/ov95_02248590.c',
    'overlay095/ov95_02249740.c',
    'overlay095/ov95_02249F90.c',
    'overlay095/ov95_0224A390.c',
    'overlay095/ov95_0224ABC0.c',
    'overlay095/ov95_0224B3D8.c',
    'overlay096/ov96_0223B140.c',
    'overlay096/ov96_0223B6A0.c',
    'overlay096/ov96_0223BCE0.c',
    'overlay097/ov97_0222AE60.c',
    'overlay097/ov97_0222C174.c',
    'overlay097/ov97_0222D04C.c',
    'overlay097/ov97_0222D2F8.c',
    'overlay097/ov97_0222D30C.c',
    'overlay097/ov97_02230410.c',
    'overlay097/ov97_02232054.c',
    'overlay097/ov97_02232200.c',
    'overlay097/ov97_02232DC8.c',
    'overlay097/ov97_02233408.c',
    'overlay097/ov97_022337FC.c',
'overlay097/ov97_02233814.c',
    'overlay097/ov97_02233B18.c',
    'overlay097/ov97_02235D18.c',
    'overlay097/ov97_0223635C.c',
    'overlay097/ov97_02236380.c',
    'overlay097/ov97_02237520.c',
    'overlay097/ov97_02237694.c',
    'overlay097/ov97_02238534.c',
    'overlay097/ov97_02238D74.c',
    'overlay097/ov97_022392E4.c',
    'overlay098/ov98_02246C20.c',
    'overlay098/ov98_022471C8.c',
    'overlay098/ov98_022499C8.c',
    'overlay099/ov99_021D0D80.c',
    'overlay099/ov99_021D1A54.c',
    'overlay099/ov99_021D2C08.c',
    'overlay099/ov99_021D2E28.c',
    'overlay099/ov99_021D340C.c',
    'overlay099/ov99_021D3A40.c',
    'overlay099/ov99_021D3C18.c',
    'overlay099/ov99_021D3DE0.c',
    'overlay099/ov99_021D3E78.c',
    'overlay099/ov99_021D4134.c',
    'overlay100/ov100_021D0D80.c',
    'overlay100/ov100_021D13E4.c',
    'overlay100/ov100_021D1C44.c',
    'overlay100/ov100_021D2F0C.c',
    'overlay100/ov100_021D400C.c',
    'overlay100/ov100_021D44C0.c',
    'overlay100/ov100_021D46C8.c',
    'overlay100/ov100_021D4E04.c',
    'overlay101/ov101_021D0D80.c',
    'overlay101/ov101_021D1A28.c',
    'overlay101/ov101_021D59AC.c',
    'overlay101/ov101_021D7E48.c',
    'overlay101/ov101_021D94D8.c',
    'overlay102/ov102_021D0D80.c',
    'overlay103/ov103_dummy.c',
    'overlay104/ov104_0222DCE0.c',
    'overlay104/ov104_0222E63C.c',
    'overlay104/ov104_0222E930.c',
    'overlay104/ov104_0222EA90.c',
    'overlay104/ov104_0222ECE8.c',
    'overlay104/ov104_0222FBE4.c',
    'overlay104/ov104_02231F74.c',
    'overlay104/ov104_022332B4.c',
    'overlay104/ov104_022339B4.c',
    'overlay104/ov104_02234838.c',
    'overlay104/ov104_02234DB4.c',
    'overlay104/ov104_022358E8.c',
    'overlay104/ov104_022361B4.c',
    'overlay104/ov104_02237378.c',
    'overlay104/ov104_02237DD8.c',
    'overlay104/ov104_02239080.c',
    'overlay104/ov104_02239130.c',
    'overlay104/ov104_022394A4.c',
    'overlay104/ov104_022395F0.c',
    'overlay104/ov104_02239C58.c',
    'overlay104/ov104_0223A0C4.c',
    'overlay104/ov104_0223A7F4.c',
    'overlay104/ov104_0223AF58.c',
    'overlay104/ov104_0223B6F4.c',
    'overlay104/ov104_0223BCBC.c',
    'overlay104/ov104_0223C164.c',
    'overlay104/ov104_0223C2D4.c',
    'overlay104/ov104_0223D5D0.c',
    'overlay104/ov104_0223D768.c',
    'overlay104/ov104_0223D860.c',
    'overlay104/ov104_0223D9E4.c',
    'overlay104/ov104_0223DC7C.c',
    'overlay104/ov104_0223E894.c',
    'overlay105/ov105_02241AE0.c',
    'overlay105/ov105_02245AAC.c',
    'overlay105/ov105_02245CD0.c',
    'overlay105/ov105_02245DC4.c',
    'overlay105/ov105_02245E54.c',
    'overlay105/ov105_02245FB8.c',
    'overlay105/ov105_02246214.c',
    'overlay106/ov106_02241AE0.c',
    'overlay106/ov106_02243310.c',
    'overlay106/ov106_022435FC.c',
    'overlay106/ov106_022436E0.c',
    'overlay107/ov107_02241AE0.c',
    'overlay107/ov107_02245EB0.c',
    'overlay107/ov107_02249604.c',
    'overlay107/ov107_02249B1C.c',
    'overlay107/ov107_02249C98.c',
    'overlay107/ov107_02249D14.c',
    'overlay108/ov108_02241AE0.c',
    'overlay108/ov108_02243030.c',
    'overlay108/ov108_0224351C.c',
    'overlay108/ov108_02243630.c',
    'overlay109/ov109_021D0D80.c',
    'overlay109/ov109_021D3D50.c',
    'overlay110/ov110_021D0D80.c',
    'overlay110/ov110_021D2124.c',
    'overlay111/ov111_021D0D80.c',
    'overlay111/ov111_021D2F80.c',
    'overlay111/ov111_021D33F4.c',
    'overlay111/ov111_021D3548.c',
    'overlay112/ov112_0225C700.c',
    'overlay113/ov113_0225C700.c',
    'overlay113/ov113_0225E368.c',
    'overlay113/ov113_02260620.c',
    'overlay113/ov113_022607D8.c',
    'overlay114/ov114_0225C700.c',
    'overlay114/ov114_02260038.c',
    'overlay114/ov114_02260044.c',
    'overlay115/ov115_02260440.c',
    'overlay115/ov115_02260BBC.c',
    'overlay115/ov115_02260CEC.c',
    'overlay115/ov115_02265A18.c',
    'overlay115/ov115_02265A24.c',
    'overlay116/ov116_02260440.c',
    'overlay116/ov116_022604C4.c',
    'overlay116/ov116_02261870.c',
    'overlay116/ov116_02262A44.c',
    'overlay116/ov116_02262A8C.c',
    'overlay116/ov116_0226432C.c',
    'overlay116/ov116_02266FEC.c',
    'overlay117/ov117_02260440.c',
    'overlay117/ov117_02260668.c',
    'overlay117/ov117_022626B0.c',
    'overlay117/ov117_02263AF0.c',
    'overlay117/ov117_02266498.c',
    'overlay117/ov117_022665FC.c',
    'overlay117/ov117_022666C0.c',
    'overlay118/ov118_021D0D80.c',
    'overlay119/ov119_021D0D80.c',
    'overlay119/ov119_021D191C.c',
    'library_tv/library_tv.c',
    'dw_warp/dw_warp.c'
)
